# Vision_intersection

./: CMakeLists.txt  README.md  geom_inter.cpp
data/cheat/: 001-rgb.png~
src/: example_opencv.cpp  harris personal space.cpp  harris.cpp  intersection.cpp  mean filter with variable threshold  pattern_matching.cpp  pattern_matching.h  threshold_yuv.cpp
